@@ -1,8 +1,5 @@
 package tokyo.nakanaka.shapeGenerator.sgSubCommandHandler;
 
-import java.util.List;
-import java.util.stream.Collectors;
-
 import tokyo.nakanaka.Direction;
 import tokyo.nakanaka.Player;
 import tokyo.nakanaka.UndoableCommand;
@@ -14,16 +11,21 @@ import tokyo.nakanaka.shapeGenerator.command.AdjustCommand;
 import tokyo.nakanaka.shapeGenerator.command.GenerateCommand;
 import tokyo.nakanaka.shapeGenerator.command.ShiftCommand;
 import tokyo.nakanaka.shapeGenerator.playerData.PlayerData;
+import tokyo.nakanaka.shapeGenerator.CommandLogColor;
+import tokyo.nakanaka.shapeGenerator.sgSubCommandHelp.SgBranchHelpConstants;
+
+import java.util.List;
 
 /**
  * Handles "/sg shift" command
  */
 public class ShiftCommandHandler implements SubCommandHandler{
+	private static final CommandLogColor cmdLogColor = new CommandLogColor(LogColor.GOLD, LogColor.RED);
 
 	@Override
 	public void onCommand(PlayerData playerData, Player player, String[] args) {
 		if(args.length != 2) {
-			player.print(LogColor.RED + "Usage: /sg shift <direction> <length>");
+			player.print(cmdLogColor.error() + "Usage: " + SgBranchHelpConstants.SHIFT.syntax());
 			return;
 		}
 		Direction dir;
@@ -31,13 +33,13 @@ public class ShiftCommandHandler implements SubCommandHandler{
 		try {
 			dir = Direction.valueOf(args[0].toUpperCase());
 		}catch(IllegalArgumentException e) {
-			player.print(LogColor.RED + "Can not parse direction");
+			player.print(cmdLogColor.error() + "Can not parse direction");
 			return;
 		}
 		try {
 			blocks = Double.parseDouble(args[1]);
 		}catch(IllegalArgumentException e) {
-			player.print(LogColor.RED + "Can not parse integer");
+			player.print(cmdLogColor.error() + "Can not parse integer");
 			return;
 		}
 		UndoCommandManager undoManager = playerData.getUndoCommandManager();
@@ -56,7 +58,7 @@ public class ShiftCommandHandler implements SubCommandHandler{
 			}
 		}
 		if(originalCmd == null) {
-			player.print(LogColor.RED + "Generate blocks first");
+			player.print(cmdLogColor.error() + "Generate blocks first");
 			return;
 		}
 		double dx = dir.getX() * blocks;
@@ -66,21 +68,19 @@ public class ShiftCommandHandler implements SubCommandHandler{
 		ShiftCommand shiftCmd = new ShiftCommand(originalCmd, displacement, playerData.getBlockPhysics());
 		shiftCmd.execute();
 		undoManager.add(shiftCmd);
-		player.print(LogColor.GOLD + "Shifted block(s) " + blocks + " " + dir.toString().toLowerCase());
+		player.print(cmdLogColor.main() + "Shifted block(s) " + blocks + " " + dir.toString().toLowerCase());
 	}
 	
 	@Override
 	public List<String> onTabComplete(PlayerData playerData, Player player, String[] args) {
-		if(args.length == 1) {
-			return List.of(Direction.values()).stream()
+		return switch (args.length) {
+			case 1 -> List.of(Direction.values()).stream()
 					.map(s -> s.toString().toLowerCase())
-					.collect(Collectors.toList());
-		}else if(args.length == 2) {
-			return List.of("0.5", "1.0", "1.5", "2.0", "2.5", "3.0", "3.5", "4.0",
+					.toList();
+			case 2 -> List.of("0.5", "1.0", "1.5", "2.0", "2.5", "3.0", "3.5", "4.0",
 					"5.0", "6.0", "6.5", "7.0", "7.5", "8.0", "8.5", "9.0", "9.5");
-		}else {
-			return List.of();
-		}
+			default -> List.of();
+		};
 	}
 	
 }
